# nRF_BLE

./: .gitignore  CMakeLists.txt  CMakeLists_2.txt  EmptyApp.cmake  README.md  prj.conf
_ASW/: CMakeLists.txt  PublicServiceUUIDs.h  ZBUS Observers.md  main.c
_ASW/BATL Coding Guidelines/: BATL Coding Guidelines.docx  Sample_Format.c
_ASW/BLE_FOTA/: BLE_FOTA_GATT.xml  FOTA_GATT.c  FOTA_GATT.h  FW_Update.c
_ASW/BLE_FOTA/BLE_FOTA_TP/: FOTA_TP.c  FOTA_TP.h  FOTA_TP_Types.h
_ASW/FOTA_FSM/: FOTA_FSM.c  FOTA_FSM.h
_ASW/GAP/: CMakeLists.txt  GAP_GATT.c  GAP_GATT.h
_ASW/_APP_LOG/: AppLog.c  AppLog.h
_ASW/_BLE/: ConnectionHandling.c  ConnectionHandling.h
_ASW/_BLE_FOTA/: CMakeLists.txt
_ASW/_BLE_FOTA/_BLE_FOTA_TP/: FOTA_TP_Types.h
_ASW/_BLE_FOTA/_FOTA_FSM/: FOTA_FSM.c  FOTA_FSM.h
_ASW/_BLE_FOTA/_FOTA_GATT_DB/: BLE_FOTA_GATT.xml  FOTA_GATT.c  FOTA_GATT.h
_ASW/_BLE_GENERIX/: BaseUUIDs.h  PublicCharacteristicUUIDs.h
_ASW/_FOTA/: CMakeLists.txt
_ASW/_FOTA/_FOTA_Event/: FOTAEvent.c  FOTAEvent.h  FOTAEvent_Types.h
_ASW/_FOTA/_FOTA_FSM/: FOTA_FSM.c  FOTA_FSM.h
_ASW/_FOTA/_FOTA_GATT_DB/: FOTA_GATT.c  FOTA_GATT.h  FOTA_GATT.xml  FOTA_GATT_Types.h
_ASW/_FOTA/_FOTA_TP/: FOTA_TP.c  FOTA_TP.h  FOTA_TP_Types.h
_ASW/_GAP/: GAP_GATT.c  GAP_GATT.h
_ASW/_GENERIX/: Helpers.c  Helpers.h
_DOC/: characteristic_uuids.yml
_DOC/Flow Diagrams/: FOTA Over BLE.drawio  Sample FOTA Flow.xlsx
src/: BALOS_types.h  CMakeLists.txt  FOTA_GATT.c  FOTA_GATT.h  FW_Update.c  main.c
src/BATL Coding Guidelines/: Sample_Format.h
src/BLE_FOTA/: CMakeLists.txt
